mob autoroll (standard values set on mob level entry)
checkload (list where a mob/obj/trg is loaded)
Auto Toggles (loot, gold, split, sac, assist, map, door, key)
Hidden mob/obj
mob/obj stacking
hindex
helpcheck
OLC copy and delete options.
export (QQ's a zone into a tarball)
Xlist (mlist, olist, rlist, zlist, slist, tlist, qlist)
(lots of major bugfixes too)
@
[Oct 20 2010] - Rumble
  Fixed freeing of null pointers in ibt.c (thanks Stoneheart)
[Sep 28 2010] - Rumble
  Fixed a couple NPC accessing player data errors.
  Fixed oedit extra desc's from always showing "Set" even if they weren't. (thanks Mirad)
[Sep 19 2010] - Rumble
  Updated World and files for 3.62 release.
[Sep 11 2010] - Rumble
  Fixed non-unix file formats and permissions. (thanks Mirad)
[Jul 26 2010] - Rumble
  Corrected several bad wear flags on objects. (thanks Insomnia)
[Jul 12 2010] - Rumble
  Fixed bad sector types. (thanks Insomnia)
[Jul 06 2010] - Rumble
  Numerous typo fixes and World files added to SVN. (thanks Insomnia)
  Fixed medit alignment menu to return you to stats menu after entry. (thanks Tink)
[Jul 03 2010] - Rumble
  Fixed oedit to allow setting of UNDEFINED object type. (thanks Tink)
  Fixed alias bug from using * as first character. (thanks Dio)
[Jun 20 2010] - Rumble
  Fixed two memory leaks. (thanks Dio)
[Jum 19 2010] - Fizban
  Changed Helpcheck from level 34 to level 32.
[Jun 07 2010] - Fizban
  Enabled nohassled immortals to give cursed items to other players.
[Jun 18 2010] - Rumble
  Fixed unaffect clearing ch affects and not vict. (thanks Drefs)
[May 24 2010] - Rumble
  Fixed bug in redit copy duplicating people in room. (thanks Anderyu)
[May 19 2010] - Rumble
  Gave Arne Troffaes proper credit for fixing Cygwin syslog rotation.
[May 16 2010] - Rumble
  Fixed bash, NO_BASH flag was being ignored. (thanks Anderyu)
[Apr 22 2010] - Rumble
  Fixed osetval not modifying AC on players. (thanks Rudeboyrave)
[Apr 12 2010] - Rumble 