@@ -77,7 +77,7 @@
 /* #undef HAVE_STRICMP */
 
 /* Define if you have the strlcpy function.  */
-/* #undef HAVE_STRLCPY */
+#define HAVE_STRLCPY 1
 
 /* Define if you have the strncasecmp function.  */
 #define HAVE_STRNCASECMP 1
@@ -113,7 +113,7 @@
 #define HAVE_LIMITS_H 1
 
 /* Define if you have the <mcheck.h> header file.  */
-#define HAVE_MCHECK_H 1
+/* #undef HAVE_MCHECK_H */
 
 /* Define if you have the <memory.h> header file.  */
 #define HAVE_MEMORY_H 1
@@ -308,16 +308,16 @@
 /* #undef NEED_STRERROR_PROTO */
 
 /* Check for a prototype to stricmp. */
-#define NEED_STRICMP_PROTO 
+/* #undef NEED_STRICMP_PROTO */
 
 /* Check for a prototype to strlcpy. */
-#define NEED_STRLCPY_PROTO 
+/* #undef NEED_STRLCPY_PROTO */
 
 /* Check for a prototype to strncasecmp. */
 /* #undef NEED_STRNCASECMP_PROTO */
 
 /* Check for a prototype to strnicmp. */
-#define NEED_STRNICMP_PROTO 
+/* #undef NEED_STRNICMP_PROTO */
 
 /* Check for a prototype to system. */
 /* #undef NEED_SYSTEM_PROTO */
